// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > it works with defaults 1`] = `
<a
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Link_379d57"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 1`] = `
<a
  class="_Text_c6fd40 _size-small_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Link_379d57"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 2`] = `
<a
  class="_Text_c6fd40 _size-medium_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Link_379d57"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;

exports[`Link > it works with sizes 3`] = `
<a
  class="_Text_c6fd40 _size-large_c6fd40 _family-sans_c6fd40 _weight-regular_c6fd40 _Link_379d57"
  data-testid="Link"
  href="#"
>
  Hello world
</a>
`;
